--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libs/system"]
 	path = libs/system
 	url = git@github.com:context-clj/system.git
+[submodule "libs/fhirpath"]
+	path = libs/fhirpath
+	url = git@github.com:HealthSamurai/fhirpath.clj.git
